# Federated-Learning-for-iot-device-attack-data

./: join.ipynb
our-federation/: README.md  pyproject.toml
our-federation/our_federation/: __init__.py  client_app.py  server_app.py  task.py
