[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "our-federation"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.1",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "admin"

[tool.flwr.app.components]
serverapp = "our_federation.server_app:app"
clientapp = "our_federation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
n_estimators = 50
max_depth = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 15
